# signal-mcp

./: .coverage  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml
examples/: check_mcp.py
signal_mcp/: channel.py  config.py  main.py  parse.py  prompts.py  rpc.py  s3.py  tools.py
tests/: test_attachments.py  test_channel.py  test_config.py  test_gating.py  test_inbound_s3.py  test_parse.py  test_prompts.py  test_receipt.py  test_resilience.py  test_s3.py  test_trusted.py  test_url_attachments.py  test_user_prompts.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: channel-mode.md  configuration.md  installation.md  intro.md  tools.md
website/src/components/HomepageFeatures/: index.tsx  styles.module.css
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
