[project]
name = "signal-mcp"
version = "0.1.0"
description = "MCP server for signal-cli — send and receive Signal messages and emoji reactions via a signal-cli daemon, with a trusted-recipients allowlist."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "anyio>=4.0.0",
    "mcp>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
signal-mcp = "signal_mcp.main:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff.lint.per-file-ignores]
# main.py adjusts sys.path before importing the package so that
# `python signal_mcp/main.py` works without an install.
"signal_mcp/main.py" = ["E402"]

[tool.mypy]
python_version = "3.13"
files = ["signal_mcp", "tests", "examples"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "signal_mcp.*"
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["signal_mcp"]
